--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
-      - uses: actions/setup-ruby@v1
+      - name: Use Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6.0
+          ruby-version: '2.6.0'
+      - name: Check Ruby version
+        run: |
+          ruby -v
       - name: Run bundle install
         run: |
             gem install bundler
